# DoctoralResearch_Dong

./: .gitignore  AGENTS.md  CMakeLists.txt  METHOD_DETAILS.md  README.md  WRONG_IMPL.md  debug_show_grasp_part_contact.py  implementation_tasks_checklist.md  logging_config.json  logging_pointcloud_config.json  mls_numba_test.py  reference_CMakeLists.txt  trimesh_bool_test.py  需求文档：机器人食品切割任务中的指尖把持点搜索系统规格书（rev_2_）.md
bench/: __init__.py  benchmark.py
configs/: default.json
cpp/score_calculator/: ScoreCalculator.cpp  ScoreCalculator.h  bindings.cpp
python/: __init__.py  main.py
python/data_process/: show_time_score_data.py  time_score_data.csv  valid_mask_rate.py
python/instrumentation/: __init__.py  timing.py
python/pipeline/: __init__.py  accumulate.py  contact_surface.py  dynamics.py  geo_filter.py  knife_model.py  pipeline_stub.py  preprocess.py  trajectory.py  valid_indices.py  wrench.py
python/utils/: __init__.py  config_loader.py  logging_sections.py  logging_setup.py  pointcloud_logging.py  py_gpt.pyi  random_seed.py
tests/: helpers.py  points.pcd  test_accumulate.py  test_contact_surface.py  test_dynamics.py  test_geo_filter.py  test_preprocess.py  test_score_calculator.py  test_trajectory.py  test_valid_indices.py  test_wrench.py
